# OpenMotor-Optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_experiment.py  setup.py  test_single.py
experiments/configs/: high_thrust_kndx.yaml
openmotor_optimizer/: __init__.py
openmotor_optimizer/compute/: gpu_scheduler.py
openmotor_optimizer/evaluation/: performance_metrics.py
openmotor_optimizer/exporters/: ric_exporter.py
openmotor_optimizer/generator/: physics_guided.py  random_generator.py
openmotor_optimizer/grains/: __init__.py  bates.py  finocyl.py  star.py
openmotor_optimizer/optimizer/: bayesian.py  genetic.py  montecarlo.py
openmotor_optimizer/propellants/: openmotor_adapter.py
openmotor_optimizer/simulation/: gpu_batch_runner.py  openmotor_runner.py
openmotor_optimizer/ui/: streamlit_app.py
